actualización del archivo index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- <script src="./index.js"></script> -->
-    <script src="./async-await.js"></script>
-
+    <!-- <script src="./async-await.js"></script> -->
+    <!-- <script src="./interceptor.js"></script>  -->
+    <!-- <script src="./headers.js"></script>  -->
+    <!-- <script src="./error.js"></script>  -->
+    <!-- <script src="./abort-controller.js"></script>  -->
+    <!-- <script src="./instancias.js"></script>  -->
+    <script src="./timeout.js"></script> 
 </body>
 </html>
